--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Amazon Estate - 페이지를 찾을 수 없음</title>
+  <title>AVAX Estate - 페이지를 찾을 수 없음</title>
   <script type="text/javascript">
     // GitHub Pages에서 SPA 리다이렉션
     var pathSegmentsToKeep = 1;
