--- a/redirect.html
+++ b/redirect.html
@@ -2,13 +2,13 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Amazon Estate - 리다이렉션</title>
+  <title>AVAX Estate - 리다이렉션</title>
   <meta http-equiv="refresh" content="0;url=/property" />
   <script type="text/javascript">
     window.location.href = "/property";
   </script>
 </head>
 <body>
-  <p>Amazon Estate 부동산 토큰화 플랫폼으로 이동합니다. 자동으로 리다이렉션되지 않는 경우 <a href="/property">여기</a>를 클릭해주세요.</p>
+  <p>AVAX Estate 부동산 토큰화 플랫폼으로 이동합니다. 자동으로 리다이렉션되지 않는 경우 <a href="/property">여기</a>를 클릭해주세요.</p>
 </body>
 </html> 
